--- a/index.html
+++ b/index.html
@@ -15,86 +15,53 @@
   <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
   <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
 </head>
-<body>
-    <header>
-      <div class="container">
-        <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-        </div>
-        <span class="fa fa-bars menu-icon"></span>
-        <div class="header-right">
-          <a href="#">Lessons</a>
-          <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
-        </div>
-      </div>
-    </header>
-    <div class="top-wrapper">
-      <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is a web service where you can learn programming online.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
-          <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
-        </div>
-      </div>
-    </div>
-    <div class="lesson-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
-        </div>
-        <div class="lessons">
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
+  <body>
+        <header>
+            <p>tes</p>
+        </header>
+
+        <main>
+            <p>kamu</p>
+        </main>
+
+        <div class="goods-wrapper">
+            <div class="container">
+                <div class="slogan">
+                    <h2>TAKE US WITH YOU</h2>
+                    <h1>RAYAKAN HARIMU BERSAMA KAMI</h1>
+                </div>
+                <div class="goods-list">
+                    <div class="goods-item">
+                        <img src="D:\Digitalent\assets\images\waiter.png" alt="waiter-icon">
+                        <p>CATERING</p>
+                        <span class="txt-contents">Kamu bisa membawa produk Kami dalam acara kantor atau selebrasi pribadi kamu.</span>
+                    </div>
+                    <div class="goods-item">
+                        <img src="D:\Digitalent\assets\images\shopping-bag-512.png" alt="coffee-pack-icon">
+                        <p>COFFEE PACK</p>
+                        <span class="txt-contents">Dalam kemasan 200gr, kamu bisa menikmati kopi specialty Kami.</span>
+                    </div>
+                    <div class="goods-item">
+                        <img src="D:\Digitalent\assets\images\115785_t_shirt_icon.png" alt="merchandise-icon">
+                        <p>MERCHANDISE</p>
+                        <span class="txt-contents">Berbagai pilihan merchandise untuk menunjukkan kecintaan kamu ke dunia kopi.</span>
+                    </div>
+                    <div class="goods-item">
+                        <img src="D:\Digitalent\assets\images\gift-basket.png" alt="hampers-icon">
+                        <p>HAMPERS</p>
+                        <span class="txt-contents">Kirimkan satu kotak berisi produk spesial Kami untuk orang spesial kamu.</span>
+                    </div>
+                </div>
             </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
-            </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
-            </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
-          </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
-            </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
-          </div>
-          <div class="clear"></div>
         </div>
-      </div>
-    </div>
-    <div class="message-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
-        </div>
-        <span class="btn message">Start Learning</span>
-      </div>
-    </div>
-    <footer>
-      <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
-      </div>
-    </footer>
-  </body>
+
+        <form>
+
+        </form>
+
+        <footer>
+
+        </footer>
+
+    </body>
 </html>
