--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
                 </div>
                 <div class="goods-list">
                     <div class="goods-item">
-                        <img src="D:\Digitalent\assets\images\waiter.png" alt="waiter-icon">
+                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/waiter.png" alt="waiter-icon">
                         <p>CATERING</p>
                         <span class="txt-contents">Kamu bisa membawa produk Kami dalam acara kantor atau selebrasi pribadi kamu.</span>
                     </div>
                     <div class="goods-item">
-                        <img src="D:\Digitalent\assets\images\shopping-bag-512.png" alt="coffee-pack-icon">
+                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/shopping-bag.png" alt="coffee-pack-icon">
                         <p>COFFEE PACK</p>
                         <span class="txt-contents">Dalam kemasan 200gr, kamu bisa menikmati kopi specialty Kami.</span>
                     </div>
                     <div class="goods-item">
-                        <img src="D:\Digitalent\assets\images\115785_t_shirt_icon.png" alt="merchandise-icon">
+                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/tshirt.png" alt="merchandise-icon">
                         <p>MERCHANDISE</p>
                         <span class="txt-contents">Berbagai pilihan merchandise untuk menunjukkan kecintaan kamu ke dunia kopi.</span>
                     </div>
                     <div class="goods-item">
-                        <img src="D:\Digitalent\assets\images\gift-basket.png" alt="hampers-icon">
+                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/gift-basket.png" alt="hampers-icon">
                         <p>HAMPERS</p>
                         <span class="txt-contents">Kirimkan satu kotak berisi produk spesial Kami untuk orang spesial kamu.</span>
                     </div>
