--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="goods-list">
                     <div class="goods-item">
-                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/waiter.png" alt="waiter-icon">
+                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/waiter.png?raw=true" alt="waiter-icon">
                         <p>CATERING</p>
                         <span class="txt-contents">Kamu bisa membawa produk Kami dalam acara kantor atau selebrasi pribadi kamu.</span>
                     </div>
