--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                 </div>
                 <div class="goods-list">
                     <div class="goods-item">
-                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/waiter.png?raw=true" alt="waiter-icon">
+                        <img src="waiter.png" alt="waiter-icon">
                         <p>CATERING</p>
                         <span class="txt-contents">Kamu bisa membawa produk Kami dalam acara kantor atau selebrasi pribadi kamu.</span>
                     </div>
                     <div class="goods-item">
-                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/shopping-bag.png" alt="coffee-pack-icon">
+                        <img src="shopping-bag.png" alt="coffee-pack-icon">
                         <p>COFFEE PACK</p>
                         <span class="txt-contents">Dalam kemasan 200gr, kamu bisa menikmati kopi specialty Kami.</span>
                     </div>
                     <div class="goods-item">
-                        <img src="https://github.com/abudtheman/DTS-FGA.E1/blob/main/tshirt.png" alt="merchandise-icon">
+                        <img src="tshirt.png" alt="merchandise-icon">
                         <p>MERCHANDISE</p>
                         <span class="txt-contents">Berbagai pilihan merchandise untuk menunjukkan kecintaan kamu ke dunia kopi.</span>
                     </div>
