--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 		<div class="content">
 			<h3>Alasan Memilih Kopi Kami</h3>
-			<p>Rilex Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas. Kopi yang diambil langsung dari Lampung. Selain rasa Rilex Coffee juga menyediakan Tempat yang Nyaman, cocok untuk belajar, meeting dan kencan. </p>
+			<p>Relax Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas. Kopi yang diambil langsung dari Lampung. Selain rasa Relax Coffee juga menyediakan Tempat yang Nyaman, cocok untuk belajar, meeting dan kencan. </p>
 		</div>
 
 	</div>
@@ -70,7 +70,7 @@
 <!--Menu-->
 <section id="menu" class="menu">
 	<h2><span>Menu</span> Kami</h2>
-	<p>Rilex Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas. </p>
+	<p>Relax Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas. </p>
 
 	<div class="row">
 		<div class="menu-card">
@@ -100,7 +100,7 @@
 
 <section id="contact" class="contact">
 	<h2><span>Kontak</span> Kami</h2>
-	<p>Rilex Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas.</p>
+	<p>Relax Coffee menyuguhkan kopi yang berkualitas dan rasa yang khas.</p>
 
 	<div class="row">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126829.29132915994!2d106.72185036816948!3d-6.595188615481835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69c5b7ad0f824b%3A0x4c71fd1b0b8ae76d!2sKota%20Bogor%2C%20Jawa%20Barat!5e0!3m2!1sid!2sid!4v1678841047502!5m2!1sid!2sid"allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
