--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://unpkg.com/feather-icons"></script>
 <!--Tutup Feather-->
 
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="stylesheest.css">
 </head>
 
 <body>
@@ -56,7 +56,7 @@
 
 	<div class="row">
 		<div class="about-img">
-			<img src="img/t.jpg" alt="Tentang Kami">
+			<img src="t.jpg" alt="Tentang Kami">
 		</div>
 		<div class="content">
 			<h3>Alasan Memilih Kopi Kami</h3>
@@ -74,19 +74,19 @@
 
 	<div class="row">
 		<div class="menu-card">
-			<img src="img/menu1.jpg" alt="Americano" class="menu-card-img">
+			<img src="menu1.jpg" alt="Americano" class="menu-card-img">
 			<h3 class="menu-card-title">-Americano-</h3>
 			<p class="menu-card-price">Rp 13.000</p>
 		</div>
 
 		<div class="menu-card">
-			<img src="img/menu2.jpg" alt="Latte" class="menu-card-img">
+			<img src="menu2.jpg" alt="Latte" class="menu-card-img">
 			<h3 class="menu-card-title">-Latte-</h3>
 			<p class="menu-card-price">Rp 20.000</p>
 		</div>
 
 		<div class="menu-card">
-			<img src="img/menu3.jpg" alt="Espresso" class="menu-card-img">
+			<img src="menu3.jpg" alt="Espresso" class="menu-card-img">
 			<h3 class="menu-card-title">-Espresso-</h3>
 			<p class="menu-card-price">Rp 23.000</p>
 		</div>
