--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://unpkg.com/feather-icons"></script>
 <!--Tutup Feather-->
 
-	<link rel="stylesheet" href="stylesheet.css">
+	<link rel="stylesheet" href="https://github.com/abudtheman/DTS-FGA.E1/blob/main/stylesheet.css">
 </head>
 
 <body>
